added more text

--- a/index.html
+++ b/index.html
@@ -43,19 +43,36 @@
         <!-- <img src="img/Muller_cover.jpg" class="rounded-circle" alt="Jeremy_icon"> -->
     </div>
     <!-- <h5 class="text-center">Jeremy Muller</h5> -->
-    <h1 class="display-6 text-center">Jeremy Muller</h1>
+
+    <h1 class="display-1 text-center">Within the Within</h1>
+
+    <div class="row justify-content-center">
+        <h1 class="display-6 col-3 text-center">Albany Records New Release</h1>
+        <h2 class="display-6 col-3 text-center">Jeremy Muller, percussion</h2>
+    </div>
 
     <!-- <p class="text-center d-grid gap-2 col-9 mx-auto">I'm an experimental percussionist, composer, & audio/visual artist.</p> -->
 
     <br>
 
-    <div class="container-fluid">
-        <div class="row-fluid">
-            <div class="col-md-4">
-            <img src="img/Muller_album_cover.jpg" class="img-fluid" alt="album_cover">
+    <div class="container-fluid gx-5">
+        <div class="row justify-content-center">
+            <div class="col-6">
+                The innovative Jeremy Muller is active as a percussionist, composer, and multimedia artist. He has performed as a featured soloist at many venues throughout the United States, Canada, and Australia and given world premieres of works by many composers including some included on this recording. Alexandre Lunsqui's Materiali includes layering of pulses and velocities generated from the exploration of materials such as clay, wood, metal, plastic, water, and air. Javier Alvarez's Temazcal is an early example of electroacoustic music. Cristyn Magnus; Pitch vs. Computer is a work that treats video games as scores, while Herbert Brün's Stalks and Trees and Drops and Clouds are very early computer work and one of the earliest conceived for a solo percussionist. Matthew Burtner's Glisten of Places is a composition and a collection method for living in the world through sound.
             </div>
-            <div class="col-md-4 offset-md-4">
-            text about album
+            <div class="col-4">
+                <img src="img/Muller_album_cover.jpg" class="img-fluid" alt="album_cover">
+                <ul class="list-unstyled">
+                    <li>1. <i>Materiali: Dentro do dentro</i>, Alexandre Lunsqui</li>
+                    <li>2. <i>Temazcal</i>, Javier Alvarez</li>
+                    <li>3. <i>Pitch vs Computer</i>, Cristyn Magnus</li>
+                    <li>4. <i>Stalks and Trees and Drops and Clouds</i>, Herbert Brün</li>
+                    <li>5. <i>Glisten of Places: 1, 2, 3</i>, Matthew Burtner</li>
+                    <li>6. <i>Glisten of Places: 4, 25, 5, 6, 26</i>, Matthew Burtner</li>
+                    <li>7. <i>Glisten of Places: 7, 9, 10, 11</i>, Matthew Burtner</li>
+                    <li>8. <i>Glisten of Places: 27, 13, 14, 16, 17</i>, Matthew Burtner</li>
+                    <li>9. <i>Glisten of Places: 18, 20, 24, 28</i>, Matthew Burtner</li>
+                </ul>
             </div>
         </div>
     </div>
