--- a/index.html
+++ b/index.html
@@ -46,33 +46,49 @@
 
     <h1 class="display-1 text-center">Within the Within</h1>
 
-    <div class="row justify-content-center">
-        <h1 class="display-6 col-3 text-center">Albany Records New Release</h1>
-        <h2 class="display-6 col-3 text-center">Jeremy Muller, percussion</h2>
+    <div class="container-fluid gx-4">
+        <div class="row justify-content-center">
+            <h1 class="display-6 col-6 text-secondary">Albany Records New Release!</h1>
+            <h1 class="display-6 col-4 text-left">Jeremy Muller, percussion</h1>
+        </div>
     </div>
 
     <!-- <p class="text-center d-grid gap-2 col-9 mx-auto">I'm an experimental percussionist, composer, & audio/visual artist.</p> -->
 
     <br>
 
-    <div class="container-fluid gx-5">
+    <div class="container-fluid gx-4">
         <div class="row justify-content-center">
             <div class="col-6">
-                The innovative Jeremy Muller is active as a percussionist, composer, and multimedia artist. He has performed as a featured soloist at many venues throughout the United States, Canada, and Australia and given world premieres of works by many composers including some included on this recording. Alexandre Lunsqui's Materiali includes layering of pulses and velocities generated from the exploration of materials such as clay, wood, metal, plastic, water, and air. Javier Alvarez's Temazcal is an early example of electroacoustic music. Cristyn Magnus; Pitch vs. Computer is a work that treats video games as scores, while Herbert Brün's Stalks and Trees and Drops and Clouds are very early computer work and one of the earliest conceived for a solo percussionist. Matthew Burtner's Glisten of Places is a composition and a collection method for living in the world through sound.
+                Jeremy Muller's debut solo percussion album features three new works by Matthew Burtner, Alexandre Lunsqui, and Cristyn Magnus. Also it features two classics by Javier Alvarez and Herbert Brün:
+                <br><br>
+                <ul>
+                    <li>Materiali: Dentro do dentro (Lunsqui) is a wonderful exploration of material textures and microsounds that require amplification. The instruments are entirely found objects of various material types such as clay, plastic, metal, water, air, rocks, and wood.</li>
+                    <li>Temazcal (Alvarez) is a staple in the percussion world and a work for maracas and electroacoustic sounds. After my doctoral research on Venezuelan maracas styles and having the opportunity to study with virtuosos like Manuel Rangel and Juan Ernesto Laya, my realization of this piece was largely inspired by my intimate journey with maracas over the past 15 years.</li>
+                    <li>Pitch vs Computer (Magnus) is a video game score controlled by the musical instrument. Magnus explores video games as a concept in order to generate meaningful interactive electronic sounds into a solo concert work. The musician is presented with the dichotomy of winning the game vs making musical decisions. It’s ultimately a battle against the instrument and the computer.</li>
+                    <li>Stalks and Trees and Drops and Clouds (Brün) was one of the very first computer-aided solos for percussion ever written. Brün uses the Calcomp pen plotter to create three graphic scores for solo percussion and this piece is one of them.</li>
+                    <li>Glisten of Places (Burtner) is a beautiful meditative work for percussion and geotagged soundscapes. Burtner recorded many field recordings of rare and unheard sounds, like inside a fire ant hill, lava flow, glaciers melting, orcas traveling at sea above and below the water simultaneously, coral reef, and more. Encoded in the percussion part are the GPS coordinates of each sound.</li>
+                </ul>
+                <br>
+                <a href="https://www.albanyrecords.com/mm5/merchant.mvc?Screen=PROD&Product_Code=TROY1877&Store_Code=AR&search=jeremy+muller&offset=&filter_cat=&PowerSearch_Begin_Only=&sort=&range_low=&range_high=" class="link-dark text-center">https://www.albanyrecords.com</a>
+
             </div>
             <div class="col-4">
                 <img src="img/Muller_album_cover.jpg" class="img-fluid" alt="album_cover">
-                <ul class="list-unstyled">
-                    <li>1. <i>Materiali: Dentro do dentro</i>, Alexandre Lunsqui</li>
-                    <li>2. <i>Temazcal</i>, Javier Alvarez</li>
-                    <li>3. <i>Pitch vs Computer</i>, Cristyn Magnus</li>
-                    <li>4. <i>Stalks and Trees and Drops and Clouds</i>, Herbert Brün</li>
-                    <li>5. <i>Glisten of Places: 1, 2, 3</i>, Matthew Burtner</li>
-                    <li>6. <i>Glisten of Places: 4, 25, 5, 6, 26</i>, Matthew Burtner</li>
-                    <li>7. <i>Glisten of Places: 7, 9, 10, 11</i>, Matthew Burtner</li>
-                    <li>8. <i>Glisten of Places: 27, 13, 14, 16, 17</i>, Matthew Burtner</li>
-                    <li>9. <i>Glisten of Places: 18, 20, 24, 28</i>, Matthew Burtner</li>
-                </ul>
+                <br><br>
+                <!-- <iframe style="border: 0; width: 100%; height: 439px;" src="https://bandcamp.com/EmbeddedPlayer/album=893385352/size=large/bgcol=333333/linkcol=ffffff/artwork=none/transparent=true/" seamless><a href="https://albanyrecords.bandcamp.com/album/within-the-within">Within the Within by Jeremy Muller</a></iframe> -->
+                <iframe style="border: 0; width: 100%; height: 439px;" src="https://bandcamp.com/EmbeddedPlayer/album=893385352/size=large/bgcol=ffffff/linkcol=333333/artwork=none/transparent=true/" seamless><a href="https://albanyrecords.bandcamp.com/album/within-the-within">Within the Within by Jeremy Muller</a></iframe>
+                <!-- <ul class="list-unstyled">
+                    <li>1. <i>Materiali: Dentro do dentro</i> (percussion) Alexandre Lunsqui</li>
+                    <li>2. <i>Temazcal</i> (maracas & electroacoustic sounds) Javier Alvarez </li>
+                    <li>3. <i>Pitch vs Computer</i> (vibraphone & interactive electronics) Cristyn Magnus</li>
+                    <li>4. <i>Stalks and Trees and Drops and Clouds</i> (percussion) Herbert Brün</li>
+                    <li>5. <i>Glisten of Places: 1, 2, 3</i> (percussion & geotagged soundscapes) Matthew Burtner</li>
+                    <li>6. <i>Glisten of Places: 4, 25, 5, 6, 26</i> (percussion & geotagged soundscapes) Matthew Burtner</li>
+                    <li>7. <i>Glisten of Places: 7, 9, 10, 11</i> (percussion & geotagged soundscapes) Matthew Burtner</li>
+                    <li>8. <i>Glisten of Places: 27, 13, 14, 16, 17</i> (percussion & geotagged soundscapes) Matthew Burtner</li>
+                    <li>9. <i>Glisten of Places: 18, 20, 24, 28</i> (percussion & geotagged soundscapes) Matthew Burtner</li>
+                </ul> -->
             </div>
         </div>
     </div>
