--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     <h1 class="display-1 text-center">Within the Within</h1>
 
     <div class="container-fluid gx-4">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center align-items-end">
             <h1 class="display-6 col-6 text-secondary">Albany Records New Release!</h1>
-            <h1 class="display-6 col-4 text-left">Jeremy Muller, percussion</h1>
+            <h1 class="display-6 col-4 text-left">Jeremy Muller <i>percussion</i></h1>
         </div>
     </div>
 
@@ -66,29 +66,41 @@
                     <li>Materiali: Dentro do dentro (Lunsqui) is a wonderful exploration of material textures and microsounds that require amplification. The instruments are entirely found objects of various material types such as clay, plastic, metal, water, air, rocks, and wood.</li>
                     <li>Temazcal (Alvarez) is a staple in the percussion world and a work for maracas and electroacoustic sounds. After my doctoral research on Venezuelan maracas styles and having the opportunity to study with virtuosos like Manuel Rangel and Juan Ernesto Laya, my realization of this piece was largely inspired by my intimate journey with maracas over the past 15 years.</li>
                     <li>Pitch vs Computer (Magnus) is a video game score controlled by the musical instrument. Magnus explores video games as a concept in order to generate meaningful interactive electronic sounds into a solo concert work. The musician is presented with the dichotomy of winning the game vs making musical decisions. It’s ultimately a battle against the instrument and the computer.</li>
-                    <li>Stalks and Trees and Drops and Clouds (Brün) was one of the very first computer-aided solos for percussion ever written. Brün uses the Calcomp pen plotter to create three graphic scores for solo percussion and this piece is one of them.</li>
+                    <li>Stalks and Trees and Drops and Clouds (Brün) was one of the very first computer-aided solos for percussion ever written. Brün uses the Calcomp pen plotter to create three graphic scores for solo percussion and this piece is one of them. See below for examples of this graphic score.</li>
                     <li>Glisten of Places (Burtner) is a beautiful meditative work for percussion and geotagged soundscapes. Burtner recorded many field recordings of rare and unheard sounds, like inside a fire ant hill, lava flow, glaciers melting, orcas traveling at sea above and below the water simultaneously, coral reef, and more. Encoded in the percussion part are the GPS coordinates of each sound.</li>
                 </ul>
-                <br>
-                <a href="https://www.albanyrecords.com/mm5/merchant.mvc?Screen=PROD&Product_Code=TROY1877&Store_Code=AR&search=jeremy+muller&offset=&filter_cat=&PowerSearch_Begin_Only=&sort=&range_low=&range_high=" class="link-dark text-center">https://www.albanyrecords.com</a>
+                <ul class="list-unstyled">
+                    <li>Clarke Rigsby (recording, mixing, editing)</li>
+                    <li>Nathan James (mastering)</li>
+                    <li>Casey Farina (album art work)</li>
+                    <li>Partial funding from Arizona Commission on the Arts Research & Development Grant</li>
+                    <li><img src="img/logo_aca_nea.jpg" class="img-fluid" alt="NEA"></li>
+                </ul>
 
             </div>
             <div class="col-4">
                 <img src="img/Muller_album_cover.jpg" class="img-fluid" alt="album_cover">
                 <br><br>
-                <!-- <iframe style="border: 0; width: 100%; height: 439px;" src="https://bandcamp.com/EmbeddedPlayer/album=893385352/size=large/bgcol=333333/linkcol=ffffff/artwork=none/transparent=true/" seamless><a href="https://albanyrecords.bandcamp.com/album/within-the-within">Within the Within by Jeremy Muller</a></iframe> -->
                 <iframe style="border: 0; width: 100%; height: 439px;" src="https://bandcamp.com/EmbeddedPlayer/album=893385352/size=large/bgcol=ffffff/linkcol=333333/artwork=none/transparent=true/" seamless><a href="https://albanyrecords.bandcamp.com/album/within-the-within">Within the Within by Jeremy Muller</a></iframe>
-                <!-- <ul class="list-unstyled">
-                    <li>1. <i>Materiali: Dentro do dentro</i> (percussion) Alexandre Lunsqui</li>
-                    <li>2. <i>Temazcal</i> (maracas & electroacoustic sounds) Javier Alvarez </li>
-                    <li>3. <i>Pitch vs Computer</i> (vibraphone & interactive electronics) Cristyn Magnus</li>
-                    <li>4. <i>Stalks and Trees and Drops and Clouds</i> (percussion) Herbert Brün</li>
-                    <li>5. <i>Glisten of Places: 1, 2, 3</i> (percussion & geotagged soundscapes) Matthew Burtner</li>
-                    <li>6. <i>Glisten of Places: 4, 25, 5, 6, 26</i> (percussion & geotagged soundscapes) Matthew Burtner</li>
-                    <li>7. <i>Glisten of Places: 7, 9, 10, 11</i> (percussion & geotagged soundscapes) Matthew Burtner</li>
-                    <li>8. <i>Glisten of Places: 27, 13, 14, 16, 17</i> (percussion & geotagged soundscapes) Matthew Burtner</li>
-                    <li>9. <i>Glisten of Places: 18, 20, 24, 28</i> (percussion & geotagged soundscapes) Matthew Burtner</li>
-                </ul> -->
+                <br>
+                <a href="https://www.albanyrecords.com/mm5/merchant.mvc?Screen=PROD&Product_Code=TROY1877&Store_Code=AR&search=jeremy+muller&offset=&filter_cat=&PowerSearch_Begin_Only=&sort=&range_low=&range_high=" class="link-dark text-center">https://www.albanyrecords.com</a>
+            </div>
+        </div>
+        <br>
+
+
+        <div class="row justify-content-center">
+            <div class="col-4">
+                <figure class="figure">
+                    <img src="img/Stalks-Clouds.jpg" class="figure-img img-fluid rounded" alt="stalks and clouds">
+                    <figcaption class="figure-caption">Stalks and clouds.</figcaption>
+                </figure>
+            </div>
+            <div class="col-4">
+                <figure class="figure">
+                    <img src="img/Trees-Drops.jpg" class="figure-img img-fluid rounded" alt="trees and drops">
+                    <figcaption class="figure-caption">Trees and drops.</figcaption>
+                </figure>
             </div>
         </div>
     </div>
