fixed layout for all devices

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
     <div class="container-fluid gx-4">
         <div class="row justify-content-center align-items-end">
-            <h1 class="display-6 col-6 text-secondary">Albany Records New Release!</h1>
-            <h1 class="display-6 col-4 text-left">Jeremy Muller <i>percussion</i></h1>
+            <h1 class="display-6 col-lg-6 col-md-6 col-sm-8 text-secondary">Albany Records New Release!</h1>
+            <h1 class="display-6 col-lg-4 col-md-4 col-sm-8 text-left">Jeremy Muller <i>percussion</i></h1>
         </div>
     </div>
 
@@ -58,8 +58,17 @@
     <br>
 
     <div class="container-fluid gx-4">
+    <!-- <div class="d-inline-flex flex-wrap"> -->
         <div class="row justify-content-center">
-            <div class="col-6">
+            <div class="col-lg-4 col-md-4 col-sm-8 order-sm-2">
+                <img src="img/Muller_album_cover.jpg" class="img-fluid" alt="album_cover">
+                <br><br>
+                <iframe style="border: 0; width: 100%; height: 439px;" src="https://bandcamp.com/EmbeddedPlayer/album=893385352/size=large/bgcol=ffffff/linkcol=333333/artwork=none/transparent=true/" seamless><a href="https://albanyrecords.bandcamp.com/album/within-the-within">Within the Within by Jeremy Muller</a></iframe>
+                <br>
+                <a href="https://www.albanyrecords.com/mm5/merchant.mvc?Screen=PROD&Product_Code=TROY1877&Store_Code=AR&search=jeremy+muller&offset=&filter_cat=&PowerSearch_Begin_Only=&sort=&range_low=&range_high=" class="link-dark text-center">https://www.albanyrecords.com</a>
+                <br><br>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-8 order-sm-1">
                 Jeremy Muller's debut solo percussion album features three new works by Matthew Burtner, Alexandre Lunsqui, and Cristyn Magnus. Also it features two classics by Javier Alvarez and Herbert Brün:
                 <br><br>
                 <ul>
@@ -76,14 +85,6 @@
                     <li>Partial funding from Arizona Commission on the Arts Research & Development Grant</li>
                     <li><img src="img/logo_aca_nea.jpg" class="img-fluid" alt="NEA"></li>
                 </ul>
-
-            </div>
-            <div class="col-4">
-                <img src="img/Muller_album_cover.jpg" class="img-fluid" alt="album_cover">
-                <br><br>
-                <iframe style="border: 0; width: 100%; height: 439px;" src="https://bandcamp.com/EmbeddedPlayer/album=893385352/size=large/bgcol=ffffff/linkcol=333333/artwork=none/transparent=true/" seamless><a href="https://albanyrecords.bandcamp.com/album/within-the-within">Within the Within by Jeremy Muller</a></iframe>
-                <br>
-                <a href="https://www.albanyrecords.com/mm5/merchant.mvc?Screen=PROD&Product_Code=TROY1877&Store_Code=AR&search=jeremy+muller&offset=&filter_cat=&PowerSearch_Begin_Only=&sort=&range_low=&range_high=" class="link-dark text-center">https://www.albanyrecords.com</a>
             </div>
         </div>
         <br>
