fixed excerpt size and links

--- a/index.html
+++ b/index.html
@@ -65,11 +65,15 @@
                 <br><br>
                 <iframe style="border: 0; width: 100%; height: 439px;" src="https://bandcamp.com/EmbeddedPlayer/album=893385352/size=large/bgcol=ffffff/linkcol=333333/artwork=none/transparent=true/" seamless><a href="https://albanyrecords.bandcamp.com/album/within-the-within">Within the Within by Jeremy Muller</a></iframe>
                 <br>
-                <a href="https://www.albanyrecords.com/mm5/merchant.mvc?Screen=PROD&Product_Code=TROY1877&Store_Code=AR&search=jeremy+muller&offset=&filter_cat=&PowerSearch_Begin_Only=&sort=&range_low=&range_high=" class="link-dark text-center">https://www.albanyrecords.com</a>
+                <i>Within the Within</i> is also available from <a href="https://www.albanyrecords.com/mm5/merchant.mvc?Screen=PROD&Product_Code=TROY1877&Store_Code=AR&search=jeremy+muller&offset=&filter_cat=&PowerSearch_Begin_Only=&sort=&range_low=&range_high=" class="link-secondary text-center">Albany Records</a>, <a href="https://www.amazon.com/Within-Jeremy-Muller/dp/B09HL48SZS/ref=sr_1_6?dchild=1&keywords=Jeremy+Muller&qid=1633890267&s=dmusic&search-type=ss&sr=1-6" class="link-secondary text-center">Amazon</a>, <a href="https://open.spotify.com/album/5rKjLpWHhy97xAVNLyf9qs?si=bH7hAkAhRAOMLdKV4PZbdg&dl_branch=1" class="link-secondary">Spotify</a>, and <a href="https://music.apple.com/us/album/within-the-within/1588276560?ign-itscg=30200&ign-itsct=music_box_link" class="link-secondary">Apple Music</a>.
+                <br>
+                <a href="https://jeremymuller.com/" class="link-dark text-center">https://jeremymuller.com</a>
+                <br>
+                <a href="https://jeremymuller.com/contact/" class="link-dark text-center">contact</a>
                 <br><br>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-8 order-sm-1">
-                Jeremy Muller's debut solo percussion album features three new works by Matthew Burtner, Alexandre Lunsqui, and Cristyn Magnus. Also it features two classics by Javier Alvarez and Herbert Brün:
+                <i><strong>Within the Within</strong></i> is Jeremy Muller's debut solo percussion album. It represents many of his interests in percussion and is the culmination of years of work. The album includes three world premieres by Matthew Burtner, Alexandre Lunsqui, and Cristyn Magnus. It also includes a couple of classic percussion works like Javier Alvarez‘s “Temazcal” (the American recording premiere) and Herbert Brün’s graphic score “Stalks and Trees and Drops and Clouds” (the recording premiere) with liner notes on the Brün by Allen Otte of PAS Hall of Fame Percussion Group Cincinnati. The album is named for Lunsqui’s work, “Materiali: Dentro do dentro.”
                 <br><br>
                 <ul>
                     <li>Materiali: Dentro do dentro (Lunsqui) is a wonderful exploration of material textures and microsounds that require amplification. The instruments are entirely found objects of various material types such as clay, plastic, metal, water, air, rocks, and wood.</li>
@@ -91,18 +95,18 @@
 
 
         <div class="row justify-content-center">
-            <div class="col-4">
+            <div class="col-lg-8 col-md-12 col-sm-12">
                 <figure class="figure">
-                    <img src="img/Stalks-Clouds.jpg" class="figure-img img-fluid rounded" alt="stalks and clouds">
-                    <figcaption class="figure-caption">Stalks and clouds.</figcaption>
+                    <img src="img/STDC-excerpt.jpg" class="figure-img img-fluid rounded" alt="stalks and clouds">
+                    <figcaption class="figure-caption text-center">Excerpt from <i>Stalks and Trees and Drops and Clouds</i>.</figcaption>
                 </figure>
             </div>
-            <div class="col-4">
+            <!-- <div class="col-4">
                 <figure class="figure">
                     <img src="img/Trees-Drops.jpg" class="figure-img img-fluid rounded" alt="trees and drops">
                     <figcaption class="figure-caption">Trees and drops.</figcaption>
                 </figure>
-            </div>
+            </div> -->
         </div>
     </div>
     <br>
