added bio and pic

--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
                 <a href="https://jeremymuller.com/" class="link-dark text-center">https://jeremymuller.com</a>
                 <br>
                 <a href="https://jeremymuller.com/contact/" class="link-dark text-center">contact</a>
+                <br>
+                The innovative Jeremy Muller is active as a percussionist, composer, and multimedia artist. He has performed as a featured soloist at
+many venues throughout the United States, Canada, and Australia including Transplanted Roots (Australia), International Computer Music Conference, The Banff Centre for the Arts (Canada), MoxSonic, ZeroSpace (University of Virginia), Northern Illinois University, Balance-Unbalance International Conference, the MIM, and PASIC.
+He has given world premieres of works by many composers including Matthew Burtner, Alexandre Lunsqui, and an evening-length tour de force solo work by Stuart Saunders Smith. As a composer, his music has been performed by Projeto Arcomusical, Arizona Contemporary Music Ensemble, Sam Houston State University, UNC Pembroke, GCC Percussion Ensemble, and many other universities across the U.S. Some of his research and publications can be found through Bachovich Music Publications & Percussive Notes.
                 <br><br>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-8 order-sm-1">
@@ -107,6 +111,21 @@
                     <figcaption class="figure-caption">Trees and drops.</figcaption>
                 </figure>
             </div> -->
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-lg-4 col-md-4 col-sm-8 order-sm-2">
+                <img src="img/Jeremy_Muller_cropped.jpg" class="img-fluid" alt="bio_pic">
+                <br>
+                <a href="https://jeremymuller.com/" class="link-dark text-center">https://jeremymuller.com</a>
+                <br>
+                <a href="https://jeremymuller.com/contact/" class="link-dark text-center">contact</a>
+                <br><br>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-8 order-sm-1">
+                The innovative Jeremy Muller is active as a percussionist, composer, and multimedia artist. He has performed as a featured soloist at
+                many venues throughout the United States, Canada, and Australia including Transplanted Roots (Australia), International Computer Music Conference, The Banff Centre for the Arts (Canada), MoxSonic, ZeroSpace (University of Virginia), Northern Illinois University, Balance-Unbalance International Conference, the MIM, and PASIC.
+                He has given world premieres of works by many composers including Matthew Burtner, Alexandre Lunsqui, and an evening-length <i>tour de force solo</i> work by Stuart Saunders Smith. As a composer, his music has been performed by Projeto Arcomusical, Arizona Contemporary Music Ensemble, Sam Houston State University, UNC Pembroke, GCC Percussion Ensemble, and many other universities across the U.S. Some of his research and publications can be found through Bachovich Music Publications & Percussive Notes.
+            </div>
         </div>
     </div>
     <br>
