added Greg Beyer's quote

--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                 <br><br>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-8 order-sm-1">
+                <p>"Jeremy Muller’s solo percussion album, <i>Within the Within</i> presents a unique collection of compositions beautifully performed and richly captured to create a captivating experience for every percussion student or aficionado. In particular, his gorgeously rendered 'Stalks and Trees and Drops and Clouds' brings to life an under appreciated masterwork of Herbert Brün that merits study and reflection."</p>
+                <footer class="blockquote-footer">Greg Beyer <cite title="Source Title">Arcomusical artistic director and Director of Percussion Studies at NIU</cite></footer>
+                </br>
                 <i><strong>Within the Within</strong></i> is Jeremy Muller's debut solo percussion album. It represents many of his interests in percussion and is the culmination of years of work. The album includes three world premieres by Matthew Burtner, Alexandre Lunsqui, and Cristyn Magnus. It also includes a couple of classic percussion works like Javier Alvarez‘s “Temazcal” (the American recording premiere) and Herbert Brün’s graphic score “Stalks and Trees and Drops and Clouds” (the recording premiere) with liner notes on the Brün by Allen Otte of PAS Hall of Fame Percussion Group Cincinnati. The album is named for Lunsqui’s work, “Materiali: Dentro do dentro.”
                 <br><br>
                 <ul>
